--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>도연이 국기 이벤트</title>
+  <title>도연이 국기게임</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -87,7 +87,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>도연이 국기 이벤트</h1>
+    <h1>도연이 국기게임</h1>
     <button id="startBtn">시작하기</button>
     <div id="game" style="display:none;">
       <div id="flagDisplay" class="flag"></div>
