--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       text-align: center;
       width: 90%;
       max-width: 500px;
+      position: relative;
+      overflow: hidden;
     }
     h1 {
       font-size: 2rem;
@@ -38,7 +40,7 @@
     .flag:hover {
       transform: scale(1.1);
     }
-    /* 정답 영역의 높이를 고정하여 container의 높이가 변경되지 않도록 함 */
+    /* 정답 영역의 높이를 고정하여 container의 레이아웃이 변경되지 않도록 함 */
     #countryName {
       font-size: 1.5rem;
       margin: 10px 0;
@@ -98,6 +100,9 @@
       </div>
     </div>
   </div>
+  
+  <!-- canvas-confetti 라이브러리 CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
   <script>
     // 신뢰할 수 있는 50개 국가의 리스트 (국기 이모지가 정상적으로 표시되는 국가)
     const wellKnownFlags = [
@@ -172,6 +177,12 @@
     answerBtn.addEventListener("click", () => {
       if (currentFlag) {
         countryNameDiv.textContent = currentFlag.country;
+        // 빵빠레 터지는 효과: confetti 라이브러리 활용
+        confetti({
+          particleCount: 100,
+          spread: 100,
+          origin: { y: 0.6 }
+        });
       }
     });
 
