--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
       if (availableFlags.length === 0) {
         // 최종 단계에서는 단계 표시를 숨기되, layout 공간은 유지
         stageDisplay.style.visibility = "hidden";
-        flagDisplay.innerHTML = '<span class="final-message">축하합니다!<br>국기 게임을 완성했어요!</span>';
+        flagDisplay.innerHTML = '<span class="final-message">정말 똑똑하군요!<br>모든 국기를 다 맞췄어요!</span>';
         // 게임 종료 시, 정답 보기 및 다음 국기 버튼 숨기고 재시작 버튼 노출
         answerBtn.style.display = "none";
         nextBtn.style.display = "none";
